# uniprot-mcp

./: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .zenodo.json  404.html  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  OVERVIEW.md  PRIVACY.md  README.md  RELEASE_AUDIT_v1.1.3.md  REVIEWER.md  SECURITY.md  SUPPORT.md  client.py  formatters.py  glama.json  index.html  llms-install.md  mkdocs.yml  noxfile.py  pyproject.toml  release-please-config.json  server.json  server.py  sitemap.xml  smithery.yaml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dev-lock-maintenance.yml  docs.yml  integration.yml  mutation.yml  release-drafter.yml  release-please.yml  release-verify.yml  release.yml  scorecard.yml
.well-known/: mcp.json
CLAIMS/: index.html
COMPETITIVE_LANDSCAPE/: index.html
COMPETITIVE_LANDSCAPE_MAINTENANCE/: index.html
INCIDENT_LOG/: index.html
INCIDENT_POLICY/: index.html
MERGE_PLAN/: index.html
MUTATION_SCORES/: index.html
RELEASE/: index.html
SECURITY-AUDIT/: index.html
THREAT_MODEL/: index.html
constraints/: dev.txt
docs/: CLAIMS.md  COMPETITIVE_LANDSCAPE.md  COMPETITIVE_LANDSCAPE_MAINTENANCE.md  INCIDENT_LOG.md  INCIDENT_POLICY.md  MERGE_PLAN.md  MUTATION_SCORES.md  PENDING_V1.md  POSTMORTEM_TEMPLATE.md  RELEASE.md  SECURITY-AUDIT.md  THREAT_MODEL.md  index.md  provenance-guide.md  quickstart.md  tools.md
docs/archive/: MERGE_PLAN.md  PENDING_V1.md  RELEASE_AUDIT_v1.1.3.md
docs/recipes/: clinical-variant-interpretation.md  drug-target-dossier.md  structural-confidence.md
examples/: 01_clinical_variant_interpretation.jsonl  02_drug_target_dossier.jsonl  03_provenance_verify_after_a_year.jsonl  04_pathogen_drug_discovery.jsonl  README.md
examples/atlas/: METHODOLOGY.md  README.md  app.md  atlas.json  braf.md  brca1.md  brca2.md  build_comprehensive_index.py  cftr.md  comprehensive_index.tsv  comprehensive_index_pathogens.tsv  cyp2d6.md  dmd.md  egfr.md  erbb2.md  fbn1.md  g6pd.md  gba.md  hbb.md  htt.md  kras.md  lmna.md  manifest.json  mlh1.md  myh7.md  nf1.md  pah.md  smn1.md  snca.md  tem1.md  tp53.md  vkorc1.md
provenance-guide/: index.html
quickstart/: index.html
recipes/clinical-variant-interpretation/: index.html
recipes/drug-target-dossier/: index.html
recipes/structural-confidence/: index.html
scripts/: check_versions.py  mutmut_shard.py  replicate.ps1  replicate.sh
search/: search_index.json
site/: 404.html
site/INCIDENT_POLICY/: index.html
site/MERGE_PLAN/: index.html
site/MUTATION_SCORES/: index.html
site/provenance-guide/: index.html
site/recipes/clinical-variant-interpretation/: index.html
site/recipes/structural-confidence/: index.html
site/search/: search_index.json
site/stylesheets/: custom.css
src/uniprot_mcp/: __init__.py  cache.py  client.py  eco.py  formatters.py  proteinchem.py  server.py
tests/: conftest.py
tests/benchmark/: AUDIT.md  README.md  demo_roundtrip.py  expected.hashes.jsonl  prompts.jsonl  run.py  score.py  seal.py  verify.py  verify_against_hashes.py  verify_answers.py
tests/benchmark/run-2026-04-25-roundtrip/: transcript.md
tests/benchmark/run-2026-04-26-v1.1.0/: README.md  verify-output.txt
tests/client/: test_audit_2026_06_15_fixes.py  test_client_error_handling.py  test_id_mapping_poll.py  test_retry_backoff.py
tests/contract/: test_atlas_consistency.py  test_atlas_manifest.py  test_benchmark_integrity.py  test_changelog_has_current_version.py  test_fixture_shapes.py  test_incident_policy.py  test_manifest_consistency.py  test_mcp_dependency_floor.py  test_security_policy_version.py  test_version_consistency.py
tests/fixtures/: MANIFEST.json  brca1_search_min.json  capture.py  p04637_min.json  verify.py
tests/integration/: test_all_tools_live.py  test_clinical_layer_live.py  test_mcp_protocol.py  test_provenance_roundtrip_live.py
tests/property/: test_accession_properties.py  test_eco_properties.py  test_new_validator_properties.py  test_search_query_construction.py
tests/unit/: test_accession_regex.py  test_batch_filter.py  test_biomedical_features.py  test_cache.py  test_cache_mutation_killers.py  test_client_async_killers.py  test_client_mutation_killers.py  test_coverage_gaps.py  test_coverage_gaps_client_chem.py  test_coverage_gaps_formatters.py  test_coverage_gaps_server.py  test_cross_origin_retry.py  test_eco.py  test_empty_set_advisories.py  test_fixture_manifest.py  test_formatter_snapshots.py  test_formatters.py  test_keyword_subcellular.py  test_pin_release.py  test_proteinchem_mutation_killers.py  test_protocol_error_contract.py  test_provenance.py  test_provenance_verify.py  test_redirect_ssrf_guard.py  test_retry_after.py  test_retry_after_delay.py  test_round_one_clinical.py  test_round_three_dossier_orthology.py  test_round_two_alphafold_publications.py  test_round_two_clinvar.py  test_self_test.py  test_server_tools.py  test_server_validation.py  test_tool_happy_paths.py  test_uniref.py  test_wave_b_3_to_7.py
tests/unit/__snapshots__/: test_formatter_snapshots.ambr
tools/: index.html
